--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -8,7 +8,7 @@
     <ul>
     <% Wordbook.all.each do |book| %>
       <a href="/home/level/<%= book.id %>">
-        <li style="margin-bottom: 0px;"><%= book.name %></li>
+        <li style="margin-bottom: 0px;"><i class="fa fa-chevron-right"></i> <%= book.name %></li>
       </a>
       <div class="wordbook-progress" style="text-align: right;">
         <div class="progressWrapper">
@@ -18,6 +18,11 @@
       <div style="text-align: right;">
         <span style="font-size: 13px;">80% 正解</span>
         <span>全1900単語</span>
+      </div>
+      <div style="text-align: right;">
+        <a href="/home/level/<%= book.id %>/allwords" class="btn-flat-logo">
+          <i class="fa fa-chevron-right"></i>単語一覧
+        </a>
       </div>
     <% end %>
     </ul>
