--- a/app/assets/stylesheets/word_tests.css
+++ b/app/assets/stylesheets/word_tests.css
@@ -79,4 +79,29 @@
 .btn-flat-logo:hover {
   background: #1ec7bb;
 }
+
+.cp_iptxt {
+  position: relative;
+  width: 90%;
+  margin: 20px 3%;
+}
+
+.cp_iptxt input[type='text'] {
+  font: 15px/24px sans-serif;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100%;
+  padding: 0.3em;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  letter-spacing: 1px;
+  border: none;
+  border-bottom: 2px solid #1b2538;
+  background: transparent;
+}
+
+.ef > input[type='text']:focus {
+  border-bottom: 2px solid #da3c41;
+  outline: none;
+}
 /*# sourceMappingURL=word_tests.css.map */
