--- a/app/views/home/level.html.erb
+++ b/app/views/home/level.html.erb
@@ -1,7 +1,11 @@
 <%= render 'share/header' %>
 <div style="padding-top: 80px;"></div>
 <div style="padding: 0 10%;">
-  <h4 style="margin: 20px 0">
+  <h4 style="color: #364e96;
+  padding: 0.5em 0;
+  border-top: solid 3px #364e96;
+  border-bottom: solid 3px #364e96;
+  margin:35px 0px;">
     レベルを選択
   </h4>
   <div class="vocabulary-level">
