--- a/app/views/home/words.html.erb
+++ b/app/views/home/words.html.erb
@@ -1,8 +1,8 @@
 <div style="margin: 10px 10%;">
-  <h2 style="color: #364e96;/*文字色*/
-  padding: 0.5em 0;/*上下の余白*/
-  border-top: solid 3px #364e96;/*上線*/
-  border-bottom: solid 3px #364e96;/*下線*/">英単語一覧</h2>
+  <h2 style="color: #364e96;
+  padding: 0.5em 0;
+  border-top: solid 3px #364e96;
+  border-bottom: solid 3px #364e96;">英単語一覧</h2>
 </div>
 
 <div class="cp_iptxt" style="text-align: center;">
