古文単語テスト機能作成

--- a/app/assets/stylesheets/vocabulary.css
+++ b/app/assets/stylesheets/vocabulary.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 
-.vocabulary-text > ul li {
+.vocabulary-text > ul > a li {
   color: black;
   position: relative;
   background: #f1f8ff;
