--- a/app/assets/stylesheets/vocabulary.scss
+++ b/app/assets/stylesheets/vocabulary.scss
@@ -2,7 +2,7 @@
   padding: 0;
 }
 
-.vocabulary-text  > ul li {
+.vocabulary-text  > ul > a li {
   color: black;
   position:relative;
   background: #f1f8ff;/*バーの色*/
