古文単語表示

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -46,11 +46,12 @@
         <span>全<%= book.old_words.length %>単語</span>
       </div>
       <div style="text-align: right;">
-        <a href="/home/level/<%= book.id %>/allwords" class="btn-flat-logo">
+        <a href="/home/level/<%= book.id %>/japanese/allwords" class="btn-flat-logo">
           <i class="fa fa-chevron-right"></i>単語一覧
         </a>
       </div>
     <% end %>
     </ul>
+
   </div>
 </div>
