--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -217,66 +217,126 @@
         </p>
       </div>
     </div>
-    <div class="balloon" style="margin-top: 0px;">
-      <div class="stu_card_content">
-        <div class="stu_card_content_subject">
-            <p class="stu_card_content_words_circle" style="margin-bottom: 5px">単</p>
-        </div>
-        <div class="stu_card_words" style="padding-left: 10px;">
-          <p style="font-size: 12px;margin-bottom: 2px;">
-            教材： <%= e[:results].last.word.wordbook.name %>
-          </p>
-          <div>
-          <p style="font-size: 12px;margin-bottom: 5px;">
-            レベル: <%= e[:results].last.word.level %>
-          </p>
+    <% if e[:class][:name] = "WordTest" %>
+      <div class="balloon" style="margin-top: 0px;">
+        <div class="stu_card_content">
+          <div class="stu_card_content_subject">
+              <p class="stu_card_content_words_circle" style="margin-bottom: 5px">単</p>
+          </div>
+          <div class="stu_card_words" style="padding-left: 10px;">
+            <p style="font-size: 12px;margin-bottom: 2px;">
+              教材： <%= e[:results].last.word.wordbook.name %>
+            </p>
+            <div>
+            <p style="font-size: 12px;margin-bottom: 5px;">
+              レベル: <%= e[:results].last.word.level %>
+            </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div style="text-align: center;padding-right: 20px;">
-        <span style="font-size: 12px;margin-bottom: 2px;margin-right: 5px;">
-          <%= e[:results].length %>問中
-        </span>
-        <span style="font-size: 17px;margin-bottom: 5px;">
-          <%= e[:results].corrects_count %>問正解
-        </span>
-      </div>
-      <div class="stu_card_content_words" style="text-align: left;">
-        <button class="btn btn-primary"
-        data-toggle="collapse"
-        data-target="#example-<%= e[:index] %>"
-        aria-expand="false"
-        aria-controls="example-<%= e[:index] %>">回答の詳細はこちら</button>
-        <div class="collapse" id="example-<%= e[:index] %>">
-          <div class="card card-body" style="padding: 10px;">
-            <table class="table table-bordered" style="margin-bottom: 0px;">
-              <thead>
-                <tr>
-                  <th scope="col"><p style="font-size: 12px; margin-bottom: 0px;">No.</p></th>
-                  <th scope="col" style="font-size: 12px">英単語</th>
-                  <th scope="col" style="font-size: 12px">日本語</th>
-                  <th class="wrong_count" scope="col" style="font-size: 9px">間違えた<br>回数</th>
-                </tr>
-              </thead>
-              <tbody>
-                <% e[:results].each_with_index do |r, i| %>
-                <% if r.correct %>
+        <div style="text-align: center;padding-right: 20px;">
+          <span style="font-size: 12px;margin-bottom: 2px;margin-right: 5px;">
+            <%= e[:results].length %>問中
+          </span>
+          <span style="font-size: 17px;margin-bottom: 5px;">
+            <%= e[:results].corrects_count %>問正解
+          </span>
+        </div>
+        <div class="stu_card_content_words" style="text-align: left;">
+          <button class="btn btn-primary"
+          data-toggle="collapse"
+          data-target="#example-<%= e[:index] %>"
+          aria-expand="false"
+          aria-controls="example-<%= e[:index] %>">回答の詳細はこちら</button>
+          <div class="collapse" id="example-<%= e[:index] %>">
+            <div class="card card-body" style="padding: 10px;">
+              <table class="table table-bordered" style="margin-bottom: 0px;">
+                <thead>
                   <tr>
-                <% else %>
-                  <tr class= "wrong-correct-word" style="color:red;">
-                <% end %>
-                    <th scope="row" style="font-size: 5px; margin-bottom: 0px;"><%= i+1 %></th>
-                    <td style="font-size: 11px; margin-bottom: 0px;"><%=r.word.english %></td>
-                    <td style="font-size: 11px; margin-bottom: 0px;"><%=r.word.japanese %></td>
-                    <td style="font-size: 11px; text-align: ceneter;"><%=r.word.wrong_count %></td>
-                  </tr> 
-                <% end %>
-              </tbody>
-            </table>
+                    <th scope="col"><p style="font-size: 12px; margin-bottom: 0px;">No.</p></th>
+                    <th scope="col" style="font-size: 12px">英単語</th>
+                    <th scope="col" style="font-size: 12px">日本語</th>
+                    <th class="wrong_count" scope="col" style="font-size: 9px">間違えた<br>回数</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% e[:results].each_with_index do |r, i| %>
+                  <% if r.correct %>
+                    <tr>
+                  <% else %>
+                    <tr class= "wrong-correct-word" style="color:red;">
+                  <% end %>
+                      <th scope="row" style="font-size: 5px; margin-bottom: 0px;"><%= i+1 %></th>
+                      <td style="font-size: 11px; margin-bottom: 0px;"><%=r.word.english %></td>
+                      <td style="font-size: 11px; margin-bottom: 0px;"><%=r.word.japanese %></td>
+                      <td style="font-size: 11px; text-align: ceneter;"><%=r.word.wrong_count %></td>
+                    </tr> 
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    <% else %>
+      <div class="balloon" style="margin-top: 0px;">
+        <div class="stu_card_content">
+          <div class="stu_card_content_subject">
+              <p class="stu_card_content_words_circle" style="margin-bottom: 5px">単</p>
+          </div>
+          <div class="stu_card_words" style="padding-left: 10px;">
+            <p style="font-size: 12px;margin-bottom: 2px;">
+              教材： <%= e[:results].last.old_word.old_wordbook.name %>
+            </p>
+          </div>
+        </div>
+        <div style="text-align: center;padding-right: 20px;">
+          <span style="font-size: 12px;margin-bottom: 2px;margin-right: 5px;">
+            <%= e[:results].length %>問中
+          </span>
+          <span style="font-size: 17px;margin-bottom: 5px;">
+            <%= e[:results].corrects_count %>問正解
+          </span>
+        </div>
+        <div class="stu_card_content_words" style="text-align: left;">
+          <button class="btn btn-primary"
+          data-toggle="collapse"
+          data-target="#example-<%= e[:index] %>"
+          aria-expand="false"
+          aria-controls="example-<%= e[:index] %>">回答の詳細はこちら</button>
+          <div class="collapse" id="example-<%= e[:index] %>">
+            <div class="card card-body" style="padding: 10px;">
+              <table class="table table-bordered" style="margin-bottom: 0px;">
+                <thead>
+                  <tr>
+                    <th scope="col"><p style="font-size: 12px; margin-bottom: 0px;">No.</p></th>
+                    <th scope="col" style="font-size: 12px">古文単語</th>
+                    <th scope="col" style="font-size: 12px">漢字</th>
+                    <th scope="col" style="font-size: 12px">意味</th>
+                    <th class="wrong_count" scope="col" style="font-size: 9px">間違えた<br>回数</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% e[:results].each_with_index do |r, i| %>
+                  <% if r.correct %>
+                    <tr>
+                  <% else %>
+                    <tr class= "wrong-correct-word" style="color:red;">
+                  <% end %>
+                      <th scope="row" style="font-size: 5px; margin-bottom: 0px;"><%= i+1 %></th>
+                      <td style="font-size: 11px; margin-bottom: 0px;"><%=r.old_word.name %></td>
+                      <td style="font-size: 11px; margin-bottom: 0px;"><%=r.old_word.kanji %></td>
+                      <td style="font-size: 11px; margin-bottom: 0px;"><%=r.old_word.meaning %></td>
+                      <td style="font-size: 11px; text-align: ceneter;"><%=r.old_word.wrong_count %></td>
+                    </tr> 
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
   </div>
 
   <% end %>
