エラー修正

--- a/app/views/home/japaneselevel.html.erb
+++ b/app/views/home/japaneselevel.html.erb
@@ -11,7 +11,7 @@
       <li style="margin-bottom: 10px;"><a href="/home/test/old/10" style="color: black;">10語</a></li>
       <li style="margin-bottom: 10px;"><a href="/home/test/old/30" style="color: black;">30語</a></li>
       <li style="margin-bottom: 10px;"><a href="/home/test/old/50" style="color: black;">50語</a></li>
-      <li style="margin-bottom: 10px;"><a href="/home/choise_retest/<%= @wordbook.id %>" style="color: black;">間違えた語をテストする</a></li>
+      <!-- <li style="margin-bottom: 10px;"><a href="/home/choise_retest/<%= @wordbook.id %>" style="color: black;">間違えた語をテストする</a></li> -->
     </ul>
   </div>
 </div>
