--- a/app/views/home/japanesetest.html.erb
+++ b/app/views/home/japanesetest.html.erb
@@ -9,7 +9,7 @@
   <div id="before_start_buttons">
     <input type="button" class="btn btn--orange start-test" id="start_test_btn" style= "margin: 15px; padding:10px;" onclick="startTest()" value="スタート" >
     <div class="before_start_cancel_buttons">
-      <a href="/home/level/<%= @wordbook.id %>" class="btn-flat-simple" type="button"><i class="fa fa-caret-right"></i>キャンセル</a>
+      <a href="/home/show"  class="btn-flat-simple" type="button"><i class="fa fa-caret-right"></i>キャンセル</a>
     </div>
   </div>
 </div>
