エラー修正

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -34,7 +34,7 @@
     <% end %>
     <% OldWordbook.all.each do |book| %>
       <a href="/home/level/japanese/<%= book.id %>">
-        <li style="margin-bottom: 0px;"><i class="fa fa-chevron-right"></i> <%= book.name %></li>
+        <li style="margin-bottom: 0px;"><i class="fa fa-chevron-right"></i>大学受験古文単語</li>
       </a>
       <div class="wordbook-progress" style="text-align: right;">
         <div class="progressWrapper">
