--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -287,7 +287,7 @@
           <div class="stu_card_words" style="padding-left: 10px;">
             古文単語
             <p style="font-size: 12px;margin-bottom: 2px;">
-              教材： <%= e[:results].last.old_word.old_wordbook.name %>
+              教材： 大学受験古文単語
             </p>
           </div>
         </div>
