--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -207,7 +207,7 @@
         </div>
         <div class="tab_content" id="design_content">
           <div class="tab_content_description">
-            <% @t.each do |t| %>
+            <% @t&.each do |t| %>
               <div class="stu_card">
                 <div class="stu_card_info" style="margin-bottom: 20px;">
                   <div class="stu_card_info_img">
