index.htmlから単語テストへのリンク追加

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -339,12 +339,12 @@
   position: fixed;
   bottom: 0;
   right: 0;
-  margin: 0 20px 30px 0;
+  margin: 0 25px 35px 10px;
   width: 75px;
 	height: 75px;
   font-size: 40px;
   border-radius: 50px;
-  background-color: #00008b;
+  background-color:#0033CC;
   color: white;
   text-align: center;
   padding: 10px;
