--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -14,7 +14,7 @@
 .tab_item {
   width: calc(100%/3);
   height: 50px;
-  border-bottom: 3px solid #5ab4bd;
+  border-bottom: 3px solid #003399;
   background-color: #d9d9d9;
   line-height: 50px;
   font-size: 16px;
@@ -53,7 +53,7 @@ input[name="tab_item"] {
 
 /*選択されているタブのスタイルを変える*/
 .tabs input:checked + .tab_item {
-  background-color: #5ab4bd;
+  background-color:#003399 ;
   color: #fff;
 }
 
