--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -344,7 +344,7 @@
 	height: 75px;
   font-size: 40px;
   border-radius: 50px;
-  background-color:#0033CC;
+  background-color:#00008b;
   color: white;
   text-align: center;
   padding: 10px;
