パスワード編集機能を実装

--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -33,6 +33,9 @@
         <%= f.label :image, "アイコン画像", class: "col-4 label" %>
         <%= f.file_field :image, class: "file-field form-control col-8" %>
       </div>
+      <% if @current_student.present? %>
+        <p><%= link_to "パスワード変更はこちらから", "/password/edit/#{@current_student.id}" %></p> 
+      <% end %>
       <div class="form-group" style="text-align: center;">
         <%= f.submit "更新", class: "btn btn-outline-warning editButton" %>
       </div>
